# lpnu-ml-labs

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: code-quality.yml
notebooks/: Lab 1 - Handwriting Recognition.ipynb
src/: datamodule.py  model.py  paths.py  trainer.py  utils.py
src/lab1/: config.py  dataloader.py  dataset.py  dataset_mnist.py  evaluate.py  features.py  model.py  predict.py  train.py  utils.py
src/lab1/modeling/: evaluate.py  model.py  predict.py  train.py
src/lab2/: config.py  dataset_audio_mnist.py  model.py  predict.py  train.py
tests/: test_dataset_mnist.py  test_trainer.py
tests/lab1/: test_dataset_mnist.py
tests/lab1/modeling/: test_model.py
