[project]
name = "lpnu-ml-labs"
version = "0.1.0"
description = "Project contains labs for the Machine Learning course at Lviv Polytechnic National University."
readme = "README.md"
authors = [
    { name = "Andrii Holovko", email = "andriy.holovko@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "torch==2.5.0",
    "torchvision>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lab1"]

[dependency-groups]
dev = [
    "pyright>=1.1.397",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.10",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.pyright]
exclude = [".venv"]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
